force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <description>Tracks delivery executions for orders</description>
    <label>Delivery</label>
    <nameField>
        <displayFormat>DEL-{00000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>