force-app/main/default/objects/Delivery__c/fields/ActualDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDate__c</fullName>
    <description>Actual delivery date (filled when status is Delivered)</description>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>