force-app/main/default/objects/Delivery__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <description>Expected delivery date based on transporter delivery time</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>