force-app/main/default/objects/Delivery__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporter</label>
    <referenceTo>Transporter__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>