force-app/main/default/objects/Delivery__c/validationRules/DeliveredStatusRequiresActualDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DeliveredStatusRequiresActualDate</fullName>
    <active>true</active>
    <description>When delivery is marked as Delivered, the actual delivery date must be filled in</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Status__c, &apos;Delivered&apos;),
        ISBLANK(ActualDate__c)
    )</errorConditionFormula>
    <errorDisplayField>ActualDate__c</errorDisplayField>
    <errorMessage>When the status is set to &quot;Delivered&quot;, you must specify the Actual Delivery Date.</errorMessage>
</ValidationRule>